--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.juhchamp.kambaqrreaderlibrary.ui.QrReaderView
+    <com.kamba.qrreader.QrReaderView
         android:id="@+id/qrReaderView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
